$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-4 (opened April 15, 2010)

	* RsquareAdj.rda: uses now correct model df in rank deficit RDA
	models. 

	* adonis: implemented tie handling in permutations. 

	* predict.cca/rda: implemented 'newdata' for type =
	"response". For CCA, 'newdata' must be constraints (environmental
	data), and for CA they must be community data. Test version, not
	yet documented (except here).

Version 1.18-3 (closed April 15, 2010)

	* new version opened with the release of vegan 1.17-2 (March 8,
	2010). 

	* DESCRIPTION: Corrected the name of Bob O'Hara (also in release
	1.17-2). 

	* scores.cca/scores.rda: scores will always have names even if the
	input data have no names. This fixes some display issues that
	Pierre Legendre had with biplot.rda(), and makes redundant the
	name checking code in summary.cca (the redundant code was not yet
	removed, but I see that this fix here was sound).

	* permutest.cca: re-weighting of permuted CCA data matrix is now
	done with compiled code using existing C function 'wcentre' (in
	goffactor.c). This may give huge speed-up (>50% time save in first
	tests) both in CCA and pCCA.  The print function of permutest puts
	now the observed statistic among permutations (the P-value is only
	evaluated at printing so that this does not influence any
	anova.cca function using permutest.cca).
	
Version 1.18-2 (closed March 8, 2010)

	* ordistep: documented the 'anova' component added to the result
	object. 

	* densityplot.oecosimu: gives no warning if there is only one
	statistic and hence only one panel.

	* nesteddisc: failed if highest species frequencies were tied. The
	error message was "Error: dims [prodcut 15] do not match the
	length of object [0]". Found by Eric Fuchs in the help forum of
	vegan.r-forge.r-project.org. The function does not try as hard to
	optimize the index, and hence it is much faster (but slacker).
