@@ -1,13 +1,13 @@
-`mantel.correlog` <- 
-	function(D.eco, D.geo=NULL, XY=NULL, n.class=0, break.pts=NULL,
-                 cutoff=TRUE, r.type="pearson", nperm=999, mult="holm",
-                 progressive=TRUE)
-{
+`mantel.correlog` <-
+    function(D.eco, D.geo=NULL, XY=NULL, n.class=0, break.pts=NULL,
+             cutoff=TRUE, r.type="pearson", nperm=999, mult="holm",
+             progressive=TRUE)
+{ 
     r.type <- match.arg(r.type, c("pearson", "spearman", "kendall"))
     mult   <- match.arg(mult, c("sidak", p.adjust.methods))
-
+    
     epsilon <- .Machine$double.eps
-    D.eco = as.matrix(D.eco)
+    D.eco <- as.matrix(D.eco)
 
     ## Geographic distance matrix
     if(!is.null(D.geo)) {
@@ -16,7 +16,7 @@
 	D.geo <- as.matrix(D.geo)
     } else {
 	if(is.null(XY)) {
-            stop("You did not provided a geographic distance matrix nor a list of site coordinates.")
+            stop("You did not provided a geographic distance matrix nor a list of site coordinates")
         } else {
             D.geo <- as.matrix(dist(XY))
         }
@@ -24,46 +24,49 @@
     
     n <- nrow(D.geo)
     if(n != nrow(D.eco))
-        stop("Numbers of objects in D.eco and D.geo are not equal.")
+	stop("Numbers of objects in D.eco and D.geo are not equal")
     n.dist <- n*(n-1)/2
     vec.D <- as.vector(as.dist(D.geo))
     vec.DD <- as.vector(D.geo)
-
-    ## Number of classes
-    if(n.class > 0) {
-	if(!is.null(break.pts))
+    
+    ## Number of classes and breakpoints
+    
+    if(!is.null(break.pts)) { 
+	## Use the list of break points
+	if(n.class > 0)
             stop("You provided both a number of classes and a list of break points. Which one should the function use?")
+	n.class = length(break.pts) - 1 
+        
     } else {
-	if(is.null(break.pts)) {
+        ## No breakpoints have been provided: equal-width classes
+        if(n.class == 0) { 
             ## Use Sturge's rule to determine the number of classes
-            n.class <- round(1 + log(n.dist, base=2))
-            start.pt <- min(vec.D)
-            end.pt <- max(vec.D)
-            width <- (end.pt - start.pt)/n.class
-            break.pts <- vector(length=n.class+1)
-            break.pts[n.class+1] <- end.pt
-            for(i in 1:n.class) {
-                break.pts[i] <- start.pt + width*(i-1) }
-        } else {
-            ## Use the list of break points
-            n.class <- length(break.pts) - 1
+            n.class <- round(1 + log(n.dist, base=2)) 
         }
+        ## Compute the breakpoints from n.class
+        start.pt <- min(vec.D)
+        end.pt <- max(vec.D)
+        width <- (end.pt - start.pt)/n.class
+        break.pts <- vector(length=n.class+1)
+        break.pts[n.class+1] <- end.pt
+        for(i in 1:n.class) 
+            break.pts[i] <- start.pt + width*(i-1) 
     }
+    
     half.cl <- n.class %/% 2
-
+    
     ## Move the first breakpoint a little bit to the left
-    break.pts[1] = break.pts[1] - epsilon   
-
+    break.pts[1] <- break.pts[1] - epsilon   
+    
     ## Find the break points and the class indices
     class.ind <- break.pts[1:n.class] +
         (0.5*(break.pts[2:(n.class+1)]-break.pts[1:n.class]))
-
+    
     ## Create the matrix of distance classes
     vec2 <- vector(length=n^2)
-    for(i in 1:n^2) {
-        vec2[i] <- min( which(break.pts >= vec.DD[i]) ) - 1
-    }
-
+    for(i in 1:n^2) 
+        vec2[i] <- min( which(break.pts >= vec.DD[i]) ) - 1 
+    
     ## Start assembling the vectors of results
     class.index <- NA
     n.dist <- NA
@@ -107,7 +110,7 @@
     
     mantel.res <- cbind(class.index, n.dist, mantel.r, mantel.p)
     mantel.res <- mantel.res[-1,]
-
+    
     ## Note: vector 'mantel.p' starts with a NA value
     mantel.p <- mantel.p[-1]
     n.tests <- length(which(!is.na(mantel.p)))
@@ -120,8 +123,8 @@
         if(progressive) {
             p.corr <- mantel.p[1]
             if(mult == "sidak") {
-                for(j in 2:n.tests) {
-                    p.corr <- c(p.corr, 1-(1-mantel.p[j])^j) }
+                for(j in 2:n.tests) 
+                    p.corr <- c(p.corr, 1-(1-mantel.p[j])^j)
             } else {
                 for(j in 2:n.tests) {
                     temp <- p.adjust(mantel.p[1:j], method=mult)
@@ -150,4 +153,3 @@
     class(res) <- "mantel.correlog"
     res
 }
-
