@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-4 (opened April 15, 2010)
 
+	* mantel.correlog: accepts now user supplied breakpoints or number
+	of classes like intended.
+
 	* RsquareAdj.rda: uses now correct model df in rank deficit RDA
 	models. 
 
